Fix spacing on form

--- a/src/components/AppointmentWindow/ApptWindow.css
+++ b/src/components/AppointmentWindow/ApptWindow.css
@@ -23,9 +23,7 @@
   border-radius: 5px;
   height: 90%;
   width: 87%;
-  margin: 1%;
   background-color: #FFBF80;
   color: #381C0B;
   padding: 3%;
-  text-align: center;
 }
